// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches snapshot: enzyme.mount 1`] = `
<Input
  onChange={null}
  type="text"
>
  <glamorous(input)
    onChange={null}
    type="text"
  >
    <input
      className="css-opcxs3"
      onChange={null}
      type="text"
    />
  </glamorous(input)>
</Input>
`;

exports[`Input matches snapshot: enzyme.render 1`] = `
<input
  class="css-opcxs3"
  type="text"
/>
`;

exports[`Input matches snapshot: enzyme.shallow 1`] = `
<glamorous(input)
  onChange={null}
  type="text"
/>
`;
